# docu-gen

./: .gitignore  README.md  pyproject.toml  summary-of-session-changes.md
src/docu_gen/: main.py
src/docu_gen/output/: confluence.py
src/docu_gen/parsers/: git.py  session.py
src/docu_gen/summarizer/: engine.py  templates.py
test_fixtures/: sample_session.json
