[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-gen"
version = "0.1.0"
description = "Generate Confluence documentation from AI agent session logs and git history"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["documentation", "confluence", "git", "ai-agents", "session-logs"]

authors = [
  { name = "docu-gen" },
]

dependencies = [
  "click>=8.0",
  "pyyaml>=6.0",
  "httpx>=0.25",
  "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["docu-gen[openai,anthropic]"]

[project.scripts]
docu-gen = "docu_gen.main:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
